Interpreter functions are declared and defined in the wrong files

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b105

      Move AbstractInterpreter:: functions into abstractInterpreter.cpp/hpp abstractInterpreter_<proc>.cpp

      Move TemplateInterpreterGenerator:: functions in to templateInterpreterGenerator_<proc>.cpp files

      templateInterpreter_<proc>.cpp files had AbstractInterpreter functions.

      Leave interpreter.hpp and interpreter.cpp to define InterpreterCodelet and the typedef:

      The class Interpreter is a typedef to TemplateInterpreter OR CppInterpreter so interpreter has no cpu specific functions and interpreter_<proc>.cpp functions should be moved and the file should be removed.

            Assignee:
            Coleen Phillimore
            Reporter:
            Coleen Phillimore
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: