8146410: Interpreter functions are declared and defined in the wrong files

Moved functions to the correct files.

Reviewed-by: goetz, aph, twisti, mockner