hotspot/src/cpu/sparc/vm/abstractInterpreter_sparc.cpp
@@ -31,18 +31,6 @@
 #include "runtime/synchronizer.hpp"
 #include "utilities/macros.hpp"
 
-// Size of interpreter code.  Increase if too small.  Interpreter will
-// fail with a guarantee ("not enough space for interpreter generation");
-// if too small.
-// Run with +PrintInterpreter to get the VM to print out the size.
-// Max size with JVMTI
-#ifdef _LP64
-  // The sethi() instruction generates lots more instructions when shell
-  // stack limit is unlimited, so that's why this is much bigger.
-int TemplateInterpreter::InterpreterCodeSize = 260 * K;
-#else
-int TemplateInterpreter::InterpreterCodeSize = 230 * K;
-#endif
 
 int AbstractInterpreter::BasicType_as_index(BasicType type) {
   int i = 0;
