hotspot/src/share/vm/interpreter/cppInterpreterGenerator.hpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2016, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -38,6 +38,8 @@ class CppInterpreterGenerator: public AbstractInterpreterGenerator {
 
  private:
   void generate_all();
+
+  address generate_slow_signature_handler();
 
   address generate_method_entry(AbstractInterpreter::MethodKind kind);
   address generate_normal_entry(bool synchronized);
